# ExaGO

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  NOTICE  README.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.yml  discussion.yml  feature_request.yml
.github/workflows/: README.md  pnnl_mirror.yaml  spack_cpu_build.yaml
.github/workflows/deprecated/: README.md
.gitlab/pnnl/: base.gitlab-ci.yml
applications/: CMakeLists.txt  dcopflow_main.cpp  opflow_main.cpp  pflow_main.cpp  scopflow_main.cpp
buildsystem/: README.md  build.sh
buildsystem/clang-hip/: cache.cmake  frontierVariables.sh
buildsystem/clang-hip/frontier/: base.sh  frontierExago.sh  frontierOptimizedExago.sh  frontierOptimizedVariables.sh
buildsystem/cmake/: ExaGOFindHiOp.cmake
buildsystem/deprecated/: README.md
buildsystem/spack/: README.md  load_spack.sh
buildsystem/spack/frontier/: env.sh  sbatch.sh  spack.yaml
buildsystem/spack/frontier/modules/: dependencies.sh  exago.sh
buildsystem/spack/spack_repo/exago/: repo.yaml
datafiles/contingencies/: create_ctgcfile.py
docs/: developer_guidelines.md  exago_policy_compatibility.md  python_bindings.md
docs/manual/: getting_started.tex  license.tex  main.tex  opflow.tex  scopflow.tex  sopflow.tex  symbols.tex  tcopflow.tex
docs/petsc-dependencies/: dmnetwork.md
docs/web/: README.ci_clusters.md  README.frontier.md  tcopflow.md  test_add.md
include/: exago_build_options.h.in  opflow.h  pflow.h  ps.h  scopflow.h  utils.h
include/private/: contingencylist.h  opflowimpl.h  psimpl.h  psse.hpp  scopflowimpl.h  sopflowimpl.h
interfaces/python/: exago_python_opflow.cpp
launcher/: CMakeLists.txt  README.md  app.py  config.yaml.in  run.sh  run.sh.in
src/opflow/: CMakeLists.txt
src/opflow/interface/: opflow.cpp  opflow2.cpp
src/opflow/model/power_bal_hiop/: paramsrajahiop.cpp  pbpolhiop.cpp  pbpolhiopkernels.cpp  pbpolrajahiopkernels.cpp  pbpolrajahiopkernels.h
src/opflow/model/power_bal_polar/: pbpol.cpp
src/opflow/solver/hiop/: opflow_hiopsparsegpu.cpp
src/opflow/solver/ipopt/: opflow_ipopt.cpp
src/pflow/: pflow.cpp
src/ps/: CMakeLists.txt  ps.cpp  psislanding.cpp  psoutput.cpp  psreaddata.cpp  psse.cpp
src/scopflow/interface/: scopflow.cpp
src/scopflow/solver/ipopt/: scopflow_ipopt.cpp
src/sopflow/interface/: sopflow.cpp  sopflowscen.cpp
src/sopflow/solver/ipopt/: sopflow_ipopt.cpp
src/tcopflow/interface/: tcopflow.cpp
src/tcopflow/model/genramp/: genramp.cpp
src/tcopflow/solver/ipopt/: tcopflow_ipopt.cpp
src/utils/: CMakeLists.txt  utils.cpp
tests/: CTestCustom.cmake.in
tests/functionality/: toml_utils.h
tests/functionality/opflow/: CMakeLists.txt  hiop_pbpolrajahiopsparse_gpu.toml  ipopt_pbpol.toml
tests/functionality/pflow/: CMakeLists.txt
tests/functionality/scopflow/: CMakeLists.txt  hiop_cont_mpi.toml  hiop_cont_mpi_pbhiop.toml  hiop_cont_pbhiop.toml  hiop_raja.toml  hiop_serial.toml  ipopt_cont.toml  selfcheck.cpp
tests/functionality/sopflow/: CMakeLists.txt  sopflow_multicontingency.toml  sopflow_multiscenario.toml  sopflow_multiscenario2.toml
tests/functionality/tcopflow/: CMakeLists.txt
tests/interfaces/python/: CMakeLists.txt
tests/unit/: CMakeLists.txt  run_test_logger.pl  test_pflow.cpp
tests/unit/opflow/: opflow_tests.h
tests/unit/opflow/objective/: CMakeLists.txt
tests/unit/pflow/: pflow_tests.h
tests/unit/ps/: CMakeLists.txt  ieee9bus_v34_shunts.raw  test_psse_parser.cpp
tests/unit/ps/data/: case0.raw  case4_3wtf_vnom0_cw2.raw  case4_3wtf_vnom0_cw3.raw  ieee9bus_v34_shunts.raw  parser_test_a.raw  parser_test_b.raw  parser_test_c.raw  parser_test_d.raw  parser_test_defaults.raw  parser_test_f.raw  parser_test_g.raw  parser_test_i.raw  parser_test_j.raw  parser_test_l.raw
viz/: .gitignore  CMakeLists.txt  README.md  app.js  geninputfile.py  index.html  module_casedata.js  package.json
viz/backend/: config.py  create_db.sh  requirements.txt  schema.sql  sqlchain.py
viz/data/: case2000.json  case_ACTIVSg500.json  dataprocess.ipynb  jsontocsv.py
viz/src/: App.jsx  color.js  dataprocess.js  index.css  module_casedata.js
