#[[#############################################################################

Preamble

#]]

cmake_minimum_required(VERSION 3.18)

project(ExaGO VERSION "2.0.0")

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/lib")

# We default to release builds
set(_DEFAULT_CMAKE_BUILD_TYPE RelWithDebInfo)
if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
  message(
    STATUS
      "Building ExaGO in '${_DEFAULT_CMAKE_BUILD_TYPE}' mode as CMAKE_BUILD_TYPE was not specified."
  )
  set(CMAKE_BUILD_TYPE
      "${_DEFAULT_CMAKE_BUILD_TYPE}"
      CACHE STRING "Choose the type of build." FORCE
  )
  set_property(
    CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "None" "Debug" "Release"
                                    "MinSizeRel" "RelWithDebInfo"
  )
else()
  message(STATUS "Building ExaGO in '${CMAKE_BUILD_TYPE}' mode.")
endif()

# Make CMake debugging available globally
include(CMakePrintHelpers)

#[[#############################################################################

Configuration and library discovery.

#]]

# Specify where CMake modules are to be found
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/buildsystem/cmake)
include(ExaGOCheckGitSubmodules)

# Set the path to options file in EXAGO installation
set(EXAGO_OPTIONS_DIR ${CMAKE_SOURCE_DIR}/options)
set(EXAGO_DATAFILES_DIR ${CMAKE_SOURCE_DIR}/datafiles)

# Specify whether to build shared libraries, static libraries, or both
option(EXAGO_BUILD_SHARED "Build shared libraries" OFF)
option(EXAGO_BUILD_STATIC "Build static libraries" ON)
include(ExaGOAddLibrary)

# Enable PETSc by default
option(EXAGO_ENABLE_PETSC "Enable PETSc support" ON)

# MPI support is enabled by default
option(EXAGO_ENABLE_MPI "Enable MPI support" ON)

# Ipopt support is enabled by default
option(EXAGO_ENABLE_IPOPT "Enable Ipopt support" ON)

# HiOP support is disabled by default
option(EXAGO_ENABLE_HIOP "Enable HiOP support" OFF)

# CUDA is disabled by default
option(EXAGO_ENABLE_CUDA "Build with support for CUDA" OFF)

# HIP is disabled by default
option(EXAGO_ENABLE_HIP "Build with support for HIP" OFF)

# GPU support is enabled when either CUDA or HIP is enabled
option(EXAGO_ENABLE_GPU "Enable GPU support" OFF)
# Marked as advanced since it is toggled automatically
mark_as_advanced(FORCE EXAGO_ENABLE_GPU)

if(EXAGO_ENABLE_HIP OR EXAGO_ENABLE_CUDA)
  set(EXAGO_ENABLE_GPU
      ON
      CACHE BOOL "Using GPU." FORCE
  )
endif()

# Enable RAJA support
option(EXAGO_ENABLE_RAJA "Enables RAJA and Umpire libraries" OFF)

# Enable Python interface
option(EXAGO_ENABLE_PYTHON "Enables Python bindings and tests" ON)

# Enable OpenMP support. This should not be toggled directly by the user, which
# is why it's marked as advanced.
option(EXAGO_ENABLE_OMP "Enables OpenMP" ON)
mark_as_advanced(FORCE EXAGO_ENABLE_OMP)

# Enable tests
option(EXAGO_RUN_TESTS "Enable tests" ON)

set(EXAGO_CTEST_LAUNCH_COMMAND
    ""
    CACHE STRING "Command to use when launching tests"
)

option(EXAGO_ENABLE_LOGGING "Enable internal logging" OFF)

# When building with HIP support, OpenMP is not supported.
if(EXAGO_ENABLE_RAJA AND EXAGO_ENABLE_HIP)
  set(EXAGO_ENABLE_OMP OFF)
endif()
# When building without RAJA, OpenMP is not required.
if(NOT EXAGO_ENABLE_RAJA)
  set(EXAGO_ENABLE_OMP OFF)
endif()

# When building with OpenMP using Apple-Clang, users should be warned about
# numerical precision issues
if(CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
  message(
    WARNING
      " When building with apple-clang built OpenMP, you will get numerical precision issues"
  )
endif()

# Estimate number of flops per trig op
set(EXAGO_FLOPS_SINOP
    15
    CACHE STRING "Estimated number of flops per sin op"
)
set(EXAGO_FLOPS_COSOP
    15
    CACHE STRING "Estimated number of flops per cos op"
)
set(EXAGO_FLOPS_TANOP
    18
    CACHE STRING "Estimated number of flops per tan op"
)
set(EXAGO_FLOPS_SQRTOP
    6
    CACHE STRING "Estimated number of flops per sqrt op"
)

# Set default include path for the project
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ${PROJECT_BINARY_DIR})

# Create alias for -lm which is needed when linking math on UNIX
if(UNIX)
  set(EXAGO_MATH_LIB m)
endif()

# If MPI support is enabled, find MPI includes and libraries
if(EXAGO_ENABLE_MPI)
  find_package(MPI REQUIRED COMPONENTS C CXX)
  message(STATUS "MPI max ranks: ${MPIEXEC_MAX_NUMPROCS}")
  set(TESTING_MAX_NUMPROCS 3)
  if(${TESTING_MAX_NUMPROCS} GREATER_EQUAL ${MPIEXEC_MAX_NUMPROCS})
    set(TESTING_MAX_NUMPROCS ${MPIEXEC_MAX_NUMPROCS})
  endif()
  message(STATUS "Max ranks for testing: ${TESTING_MAX_NUMPROCS}")
  include_directories(
    ${MPI_CXX_HEADER_DIR} ${MPI_CXX_ADDITIONAL_INCLUDE_DIRS}
    ${MPI_CXX_COMPILER_INCLUDE_DIRS}
  )
  set(EXAGO_EXTRA_MPI_FLAGS
      ""
      CACHE STRING "Extra args to mpiexec when running tests"
  )
else()
  set(TESTING_MAX_NUMPROCS 1)
endif(EXAGO_ENABLE_MPI)

# If CUDA support is enabled, set up CUDA compiler and flags
if(EXAGO_ENABLE_CUDA)
  include(CheckLanguage)
  check_language(CUDA)
  enable_language(CUDA)

  find_package(CUDAToolkit REQUIRED)

  if(NOT DEFINED CMAKE_CUDA_STANDARD)
    set(CMAKE_CUDA_STANDARD 17)
    set(CMAKE_CUDA_STANDARD_REQUIRED ON)
  endif()

  if(NOT DEFINED CMAKE_CUDA_ARCHITECTURES)
    set(CMAKE_CUDA_ARCHITECTURES 70)
  endif()

  set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --expt-extended-lambda")

  # HiOp requires this since we require static
  set(CMAKE_CUDA_SEPARABLE_COMPILATION ON)
endif(EXAGO_ENABLE_CUDA)

# If HIP support is enabled, set up HIP compiler and flags
if(EXAGO_ENABLE_HIP)
  set(EXAGO_HAVE_HIP 1)
  add_compile_definitions(HAVE_HIP) # For hipmagma
  find_package(hip REQUIRED)
endif()

# Find PETSc and configure related variables
if(EXAGO_ENABLE_PETSC)
  set(PETSC_DIR CACHE PATH "Path to PETSc installation root directory")
  include(FindPkgConfig)
  # Include petsc package path in pkg_config_path
  set(PKG_CONFIG_PATH_save $ENV{PKG_CONFIG_PATH})
  set(ENV{PKG_CONFIG_PATH}
      ${PETSC_DIR}/lib/pkgconfig:${PETSC_DIR}/${PETSC_ARCH}/lib/pkgconfig
  )
  pkg_check_modules(PETSC REQUIRED IMPORTED_TARGET PETSc>=3.24)
  set(EXAGO_HAVE_PETSC 1)
  set(ENV{PKG_CONFIG_PATH} ${PKG_CONFIG_PATH_save})
endif()

set(CMAKE_INSTALL_RPATH_USE_LINK_PATH ON)

if(EXAGO_ENABLE_IPOPT)
  set(IPOPT_ROOT_DIR CACHE PATH "Path to Ipopt installation root.")
  include(FindIpopt)
  set(CMAKE_INSTALL_RPATH ${IPOPT_LIBRARY_DIR} ${CMAKE_INSTALL_RPATH})
endif(EXAGO_ENABLE_IPOPT)

if(EXAGO_ENABLE_OMP)
  find_package(OpenMP REQUIRED COMPONENTS C CXX)
endif()

set(EXAGO_ENABLE_HIOP_SPARSE OFF)
mark_as_advanced(EXAGO_ENABLE_HIOP_SPARSE FORCE)
if(EXAGO_ENABLE_HIOP)
  include(ExaGOFindHiOp)
  if(NOT TARGET RAJA)
    # In HiOp's exported CMake configuration, there is a call to:
    # find_package(RAJA PATHS @RAJA_DIR@) This means the RAJA target should be
    # defined in HiOp 0.7.0+ if hiop+raja RAJA part of ExaGO will not work if
    # HiOp is not built with RAJA
    message(
      WARNING
        "HiOp was built without RAJA - ExaGO RAJA module calling HiOp may not work!"
    )
  endif()
endif(EXAGO_ENABLE_HIOP)

if(EXAGO_ENABLE_RAJA)

  # Look for CMake configuration file in RAJA installation
  find_package(
    RAJA CONFIG PATHS ${RAJA_DIR} ${RAJA_DIR}/share/raja/cmake REQUIRED
  )
  # Look for CMake configuration file in Umpire installation
  find_package(
    umpire CONFIG PATHS ${umpire_DIR} ${umpire_DIR}/share/umpire/cmake REQUIRED
  )
  target_include_directories(umpire INTERFACE ${camp_INSTALL_PREFIX}/include)
endif(EXAGO_ENABLE_RAJA)

if(NOT DEFINED LAPACK_LIBRARIES)
  # in case the toolchain defines them
  find_package(LAPACK REQUIRED)
  message(STATUS "Found LAPACK libraries: ${LAPACK_LIBRARIES}")
endif(NOT DEFINED LAPACK_LIBRARIES)

# Set up configuration header file
configure_file(include/exago_config.h.in exago_config.h)
configure_file(include/exago_build_options.h.in exago_build_options.h)

#[[#############################################################################

Build libraries and testing framework.

#]]

if(EXAGO_RUN_TESTS)
  enable_testing()
  include(ExaGOTestingUtilities)
  configure_file(tests/CTestCustom.cmake.in CTestCustom.cmake)
endif()

if(EXAGO_ENABLE_LOGGING)
  find_package(spdlog REQUIRED)
  find_package(fmt REQUIRED)
endif()

# Build libraries (specified in src/CMakeLists.txt)
add_subdirectory(src)

# Build applications (specified in applications/CMakeLists.txt)
add_subdirectory(applications)

#[[#############################################################################

Installation of libraries, headers, and datafiles used for testing.

#]]

# EXAGO options files to install
set(EXAGO_OPTIONS_FILES options/pflowoptions)

if(EXAGO_ENABLE_IPOPT OR EXAGO_ENABLE_HIOP)
  set(EXAGO_OPTIONS_FILES ${EXAGO_OPTIONS_FILES} options/opflowoptions
                          options/hiop.options
  )
endif()

if(EXAGO_ENABLE_IPOPT)
  set(EXAGO_OPTIONS_FILES
      ${EXAGO_OPTIONS_FILES} options/scopflowoptions options/sopflowoptions
      options/tcopflowoptions options/ipopt.opt
  )
endif()

# Install options files
install(FILES ${EXAGO_OPTIONS_FILES} DESTINATION options)

# EXAGO datafiles to install
set(EXAGO_DATA_FILES ${PROJECT_SOURCE_DIR}/datafiles/case118.m
                     ${PROJECT_SOURCE_DIR}/datafiles/case_ACTIVSg200.m
)

if(EXAGO_ENABLE_IPOPT OR EXAGO_ENABLE_HIOP)
  set(EXAGO_DATA_FILES
      ${EXAGO_DATA_FILES}
      ${PROJECT_SOURCE_DIR}/datafiles/case118.cont
      ${PROJECT_SOURCE_DIR}/datafiles/case_ACTIVSg200.cont
      ${PROJECT_SOURCE_DIR}/datafiles/10_scenarios_ACTIVSg200.csv
      ${PROJECT_SOURCE_DIR}/datafiles/10_scenarios_ACTIVSg2000.csv
  )
endif()

# Install data files
install(FILES ${EXAGO_DATA_FILES} DESTINATION datafiles)

# EXAGO headers to install
set(EXAGO_COMMON_INCLUDE
    include/constants.h include/version.h ${PROJECT_BINARY_DIR}/exago_config.h
    ${PROJECT_BINARY_DIR}/exago_build_options.h
)

# Install header files
install(FILES ${EXAGO_COMMON_INCLUDE} DESTINATION include)

#[[#############################################################################

Test definitions.

@note The tests rely on utilities in @file cmake/ExaGOTestingUtilities.cmake.

@note If running with a job scheduler, pass the required commands to
  EXAGO_CTEST_LAUNCH_COMMAND. For example, to launch a slurm job for each test:
  `cmake $SRC_DIR -DEXAGO_CTEST_LAUNCH_COMMAND="srun -N 1 --gres=gpu:1 -t 10:00"`

#]]
if(NOT (EXAGO_CTEST_LAUNCH_COMMAND STREQUAL ""))
  message(
    STATUS
      "Manually overriding launch command for CTest with \"${EXAGO_CTEST_LAUNCH_COMMAND}\""
  )
  string(REPLACE " " ";" RUNCMD_LIST "${EXAGO_CTEST_LAUNCH_COMMAND}")
  set(RUNCMD ${RUNCMD_LIST})
  set(MPICMD ${RUNCMD_LIST})
else()
  if(EXAGO_ENABLE_MPI)
    set(MPICMD "${MPIEXEC_EXECUTABLE}")
    set(RUNCMD ${MPICMD} "${MPIEXEC_NUMPROC_FLAG}" "1" ${EXAGO_EXTRA_MPI_FLAGS})
  else()
    set(MPICMD "")
    set(RUNCMD "")
  endif()
endif()

if(EXAGO_ENABLE_PYTHON)
  include(ExaGOCheckPython)
  # Build pybind11 target manually
  add_subdirectory(tpl/pybind11)
  add_subdirectory(interfaces/python)
endif()

if(EXAGO_RUN_TESTS)
  # Build tests
  add_subdirectory(tests)
endif()

if((NOT EXAGO_ENABLE_IPOPT) AND (NOT EXAGO_ENABLE_HIOP))
  message(
    WARNING
      "ExaGO not configured with any optimization solver. Only PFLOW application will be available. Please enable Ipopt and/or HiOp for other applications."
  )
endif()

if(EXAGO_ENABLE_PYTHON)
  add_subdirectory(launcher)
  add_subdirectory(viz)
  install(DIRECTORY ${PROJECT_SOURCE_DIR}/datafiles DESTINATION share/exago)
endif()
